[project]
name = "amplifier-module-provider-perplexity"
version = "1.0.0"
description = "Perplexity AI provider for Amplifier - web-grounded search with citations"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "perplexityai>=0.27.0",
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core",
]

[project.entry-points."amplifier.modules"]
provider-perplexity = "amplifier_module_provider_perplexity:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_provider_perplexity"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.21.1",
]
